# going-concern-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  smoke_test_api.ps1  verify.sh  verify_api.ps1  verify_api.sh  verify_classifier.ps1  verify_classifier.sh  verify_eval.ps1  verify_frontend.ps1  verify_frontend.sh  verify_ingestion.ps1  verify_ingestion.sh
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_pipeline_runs.py  b2c3d4e5f6a7_add_check_constraints.py  c4acc39a8be2_add_display_name_to_companies.py  ed2a57123cd6_make_company_ticker_nullable.py  f09c9c08ba9d_initial_schema.py
apps/api/data/: watchlist.yaml
apps/api/eval/: golden_set.json
apps/api/eval/reports/: final.json
apps/api/scripts/: dump_classified.py  finalize_expansion.py  fix_bbby_mislabel.py  fix_classifier_version.py  fix_seritage_display_name.py  generate_eval_set.py  set_2024_display_names.py  set_display_names.py  verify_watchlist_expansion.py
apps/api/src/gct/: __init__.py  config.py  database.py  main.py  (+1 more)
apps/api/tests/: conftest.py  conftest_api.py  test_benchmark.py  test_cik_normalization.py  test_classifier_prompts.py  test_classifier_schemas.py  test_classifier_validator.py  test_cli_refresh.py  test_edgar_client.py  test_filing_fetcher.py  test_filing_parser.py  test_health.py  test_pagination.py  test_routes_companies.py  test_routes_flags.py  test_routes_pipeline.py  test_routes_search.py  test_routes_stats.py  test_routes_subscriptions.py  test_sql_constraints.py  test_ticker_lookup.py
(+88 files in other folders)
